--- a/static/css/mdc/style.css
+++ b/static/css/mdc/style.css
@@ -13,7 +13,7 @@
 	cursor: pointer
 }
 #equipment_monitor_div .main {
-	width: 1280px;
+	/*width: 1280px;*/
 	margin: auto;
 	height: auto;
 	padding: 20px 0;
