--- a/views/mes.html
+++ b/views/mes.html
@@ -1,8 +1,12 @@
 {{template "header.html" .}}
 {{template "nav.html" .}}
-
-
-<ul id="tt"></ul>
+<div class="container">
+	<div class="row">
+		<div class="col-md-2">
+			<ul id="tt"></ul>
+		</div>
+	</div>
+</div>
 <script type="text/javascript">
 	
 $('#tt').tree({
