--- a/views/header.html
+++ b/views/header.html
@@ -82,5 +82,12 @@
     <script type="text/javascript" src="/static/js/respond.min.js"></script>
     <![endif]-->
 </head>
+<script type="text/javascript">
+    var pHeight;
+    $(function() {
+        pHeight = $(document).height() - 185;
+    })
+    
+</script>
 
 <body class="bootstrap-admin-with-small-navbar">
