--- a/views/nav.html
+++ b/views/nav.html
@@ -55,7 +55,11 @@
                 <div class="collapse navbar-collapse main-navbar-collapse">
                     <ul class="nav navbar-nav">
                         {{range .modules}}
-                             <li{{if eq .Url $.url}} class="active"{{end}}><a href="{{.Url}}">{{.Name}}</a></li>
+                            {{if eq .Url $.url}}
+                                <li class="active"><a href="#">{{.Name}}</a></li>
+                            {{else}}
+                                <li><a href="{{.Url}}">{{.Name}}</a></li>
+                            {{end}}
                         {{end}}
                     </ul>
                      <ul class="nav navbar-nav navbar-right">
